[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Models/Book/LibreCaslonText-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Models/Book/LibreBodoni-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Models/Book/LibreBodoni-Medium.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="Article" type="TextEdit" parent="."]
visible = false
anchor_left = 0.304688
anchor_top = 0.0833333
anchor_right = 0.695313
anchor_bottom = 0.916667
custom_constants/line_spacing = 4
custom_fonts/font = SubResource( 4 )
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TitleLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="PageLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -38.0
margin_right = 175.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="Character" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 7, 2.6 )

[node name="Camera" type="Camera" parent="Character"]
fov = 80.0
far = 200.0
script = ExtResource( 2 )
sensitivity = 0.4

[node name="Console" type="LineEdit" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
